[gd_scene load_steps=3 format=3 uid="uid://cvw3hioxdngev"]

[ext_resource type="Script" path="res://levels.gd" id="1_nuqdd"]
[ext_resource type="FontFile" uid="uid://boqbi4kmcdk11" path="res://Born2bSportyV2.ttf" id="2_fqbfv"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_nuqdd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1165.0
offset_bottom = 661.0
color = Color(0.176471, 0.384314, 0.368627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -50.5
offset_right = 31.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fqbfv")
theme_override_font_sizes/font_size = 100
text = "LEVELS"

[node name="Level 1" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level 3")
theme_override_fonts/font = ExtResource("2_fqbfv")
theme_override_font_sizes/font_size = 31
text = "Level 1"

[node name="Level 2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fqbfv")
theme_override_font_sizes/font_size = 31
text = "Level 2"

[node name="Level 3" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Level 1")
theme_override_fonts/font = ExtResource("2_fqbfv")
theme_override_font_sizes/font_size = 31
text = "Level 3"

[connection signal="pressed" from="VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 3" to="." method="_on_level_3_pressed"]
